@@ -1,1 +1,1 @@
-OPENBSM_1_0_ALPHA_1
+OPENBSM_1_0_ALPHA_2
